<resources>
    <string name="app_name">Réttritun</string>
    <string name="title_activity_spell_checker_settings">SpellCheckerSettingsActivity</string>


    <string name="spellchecker_name">Réttritun Spell Checker</string>
    <string name="subtype_generic" translatable="true">%s</string>
    <!-- Main -->
    <string name="spell_checker_settings">Spell Checker Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="text_box_hint">Try it out!</string>
    <string name="ok">OK</string>
    <string name="privacy_notice">Réttritun sends the user text to a web service for processing. After processing is finished, the text is immediately deleted from the phone and the web service. No personal data is collected and the IP address of the phone is anonymized when accessing the web service.\n\nPlease visit our privacy policy at https://www.grammatek.com/legal#rettritun</string>
    <string name="privacy_title">Important</string>
git     <string name="open_in_new">Open in new</string>
    <!-- INFO -->
    <string name="info_other">Other</string>
    <string name="info_github">Github</string>
    <string name="info_about_device_title">Device Information</string>
    <string name="info_copyright">Copyright</string>
    <string name="info_copyright_text">© (2022) Grammatek ehf.</string>
    <string name="info_copyright_url">https://www.grammatek.com</string>
    <string name="info_url">URL</string>
    <string name="info_privacy_notice">Privacy notice</string>
    <string name="info_privacy_notice_url">https://www.grammatek.com/legal#rettritun</string>
    <string name="info_android_version">Android Version</string>
    <string name="info_app_version">Version</string>
    <string name="info_version_error">Error retrieving version info</string>
    <string name="info_supported_abis">Supported ABIs</string>
    <string name="info_phone_model">Phone Model</string>
    <string name="info_about">© (2022) Grammatek ehf.\nhttps://www.grammatek.com</string>
    <string name="info_repo_url">https://github.com/grammatek/simacorrect</string>
    <string name="info_benchmark">Benchmark</string>
    <string name="info_benchmark_value">times faster than real time</string>
    <!-- Feedback -->
    <string name="email_subject">Feedback on Réttritun</string>
    <string name="email_message">Feedback: </string>
    <string name="send_message">Send mail …</string>
    <!-- API Url -->
    <string name="grammatek_api_url" translatable="false">yfirlestur.grammatek.com</string>
</resources>