<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rettritun_blue"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/EditTextTheme"
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:hint="@string/text_box_hint"
        app:boxBackgroundColor="@color/rettritun_blue_light"
        android:textColorHint="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:textColor="@color/white"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/feedbackCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/rettritun_blue_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <TextView
            android:id="@+id/feedback"
            style="@style/about_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/feedback"
            android:layout_gravity="start|center"/>

        <ImageView
            android:contentDescription="@string/open_in_new"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end|center"
            app:tint="@color/white"
            android:src="@drawable/ic_icon_feedback"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/settingsCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/rettritun_blue_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackCard">

        <TextView
            android:id="@+id/settings"
            style="@style/about_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/spell_checker_settings"
            android:layout_gravity="start|center"/>

        <ImageView
            android:contentDescription="@string/open_in_new"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end|center"
            app:tint="@color/white"
            android:src="@drawable/ic_icon_settings"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aboutCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/rettritun_blue_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsCard">

        <TextView
            android:id="@+id/about"
            style="@style/about_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/about"
            android:layout_gravity="start|center"/>

        <ImageView
            android:contentDescription="@string/open_in_new"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end|center"
            app:tint="@color/white"
            android:src="@drawable/ic_icon_about"
            />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>